MDEV-5703: [PATCH] Slave disconnects and fails to reconnect on Error_code: 1159

Patch from Tomas Matejicek

Add missing error code to is_networ_error(), to allow slave to
automatically attempt reconnection also in this case.